--- a/.env.development
+++ b/.env.development
@@ -8,7 +8,7 @@ VITE_PUBLIC_PATH = '/'
 VITE_USE_HASH = false
 
 # base api
-VITE_BASE_API = 'https://api.github.com'
+VITE_BASE_API = 'http://127.0.0.1:8887'
 
 
 
